[tool.poetry]
name = "merchant-bot"
version = "0.1.0"
description = "simple bot for one guy"
authors = ["boldyrevn <boldyrev.now@mail.ru>"]
readme = "README.md"
packages = [{include = "merchant_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
python-dotenv = "^1.0.0"
aiohttp = "^3.8.4"
asyncpg = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
